--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/styled-components": "^5.1.25",
     "@vitejs/plugin-react": "^2.0.0",
     "prettier": "^2.7.1",
     "typescript": "^4.6.4",
